--- a/client/.project
+++ b/client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>chatSocket20230822</name>
+	<name>client</name>
 	<comment></comment>
 	<projects>
 	</projects>
