--- a/chatSocket20230822/.project
+++ b/chatSocket20230822/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>chatSocketServer20230822</name>
+	<name>chatSocket20230822</name>
 	<comment></comment>
 	<projects>
 	</projects>
