--- a/pweb2024_03_13_noticias/pom.xml
+++ b/pweb2024_03_13_noticias/pom.xml
@@ -8,15 +8,19 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.blog</groupId>
-	<artifactId>pweb2024_03_13_noticias</artifactId>
+	<groupId>com.helloproject</groupId>
+	<artifactId>demonstration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>noticias</name>
-	<description>Exemplo de blog de notícias</description>
+	<name>demonstration</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -27,6 +31,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
