--- a/pweb2024_04_17_ms_user/src/main/resources/application.properties
+++ b/pweb2024_04_17_ms_user/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=user
+server.port=8081
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms-user
+#lab gsort
+spring.datasource.username=postgres
+spring.datasource.password=gsort123
+spring.jpa.hibernate.ddl-auto=update
